Fixed bleed and position on H1

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  width: 100vw;
+  width: 100%;
   height: 150px;
   display: flex;
   flex-direction: column;
