--- a/src/pages/singelpost.scss
+++ b/src/pages/singelpost.scss
@@ -3,6 +3,7 @@
   margin-right: 10%;
   margin-bottom: 50px;
   max-width: 1300px;
+
   @media only screen and (max-width: 700px) {
     margin-left: 5%;
     margin-right: 5%;
@@ -36,11 +37,15 @@
   text-align: center;
 }
 .title {
-  color: black;
   position: relative;
   text-align: center;
   left: 0;
   margin-top: 50px;
+
+  @media only screen and (max-width: 700px) {
+    font-size: 4rem;
+    top: 0;
+  }
 }
 img {
   width: 100%;
